2024-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-file-modes)
	(tramp-compat-set-file-modes, tramp-compat-set-file-times)
	(tramp-compat-directory-files)
	(tramp-compat-directory-files-and-attributes)
	(tramp-compat-directory-empty-p, tramp-compat-null-device)
	(tramp-compat-string-replace, tramp-compat-string-search)
	(tramp-compat-make-lock-file-name)
	(tramp-compat-file-name-concat)
	(tramp-compat-replace-regexp-in-region, tramp-compat-length<)
	(tramp-compat-length>, tramp-compat-length=)
	(tramp-compat-always): Remove.

	* tramp-adb.el:
	* tramp-androidsu.el:
	* tramp-archive.el:
	* tramp-cache.el:
	* tramp-cmds.el:
	* tramp-compat.el:
	* tramp-crypt.el:
	* tramp-fuse.el:
	* tramp-gvfs.el:
	* tramp-message.el:
	* tramp-sh.el:
	* tramp-smb.el:
	* tramp-sshfs.el:
	* tramp-sudoedit.el:
	* tramp.el: Use original objects instead of their `tramp-compat-'
	counterparts when possible.

2024-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Extend docstring.

	* tramp-integration.el (shortdoc): Add further examples of
	`file-remote-p'.

	* tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* tramp-sh.el (tramp-maybe-open-connection): Improve message.

2024-07-15  Jim Porter  <jporterbugs@gmail.com>

	* tramp.el (tramp-signal-process): Strip the "SIG" prefix when present.

2024-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-enable-run0-method): Adapt "run0" arguments.

2024-07-09  Stefan Kangas  <stefankangas@gmail.com>

	* tramp-adb.el (tramp-adb-handle-get-remote-uid):
	* tramp-cmds.el (tramp-recompile-elpa-command-completion-p):
	* tramp-crypt.el (tramp-crypt-command-completion-p):
	* tramp-message.el (tramp-debug-buffer-command-completion-p):
	* tramp-sh.el (tramp-use-connection-share):
	* tramp.el (tramp-command-completion-p): Checkdoc fixes.

2024-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-host-with-port-regexp): Declare.