@@ -1,3 +1,15 @@
+2024-07-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-kubernetes-namespace): Initialize with
+	nil.  Adapt docstring.
+	(tramp-kubernetes--name-regexp): New defconst.
+	(tramp-kubernetes--host-name-regexp): Change in order to cover
+	also an optional namespace.  (Bug#59797)
+	(tramp-kubernetes--namespace): New defun.
+	(tramp-kubernetes--context-namespace): Use it.
+	(tramp-skeleton-kubernetes-vector): Add sanity check for
+	superfluous user name or port number.
+
 2024-07-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-file-modes)
